# bert_service

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  mongo.rs
