[package]
name = "bert_as_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
mongodb = {version = "2.3.0", default-features = false, features = ["tokio-runtime"]}
mongodb-gridfs = "0.2.2"
zip = { version = "0.6.2", default-features = false }
chrono = "0.4.20"